force-app/main/default/objects/Location/Location.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>