force-app/main/default/objects/Location/fields/Code_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Code_Location_Name__c</fullName>
    <formula>PMC_CPQ_SAPLocationId__c &amp; &quot; - &quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Location Name</label>
    <type>Text</type>
</CustomField>