force-app/main/default/objects/Location/fields/PMC_CPQ_AgreementEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AgreementEndDate__c</fullName>
    <description>Agreement Start Date for Ex-space location Object.</description>
    <label>Agreement End Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>