force-app/main/default/objects/Location/fields/PMC_CPQ_AgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AgreementNumber__c</fullName>
    <description>Agreement number for Ex-space  location Object.</description>
    <label>Agreement Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>