force-app/main/default/objects/Location/fields/PMC_CPQ_AgreementStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AgreementStartDate__c</fullName>
    <description>Agreement Start Date for Ex-space location object</description>
    <label>Agreement Start Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>