force-app/main/default/objects/Location/fields/PMC_CPQ_AlternateReportingContact__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AlternateReportingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alternate Reporting Contact for Ex-space location Object.</description>
    <label>Alternate Reporting  Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>