force-app/main/default/objects/Location/fields/PMC_CPQ_BinSpace__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BinSpace__c</fullName>
    <description>Bin Space for EX-space location object.</description>
    <label>Bin Space</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>