force-app/main/default/objects/Location/fields/PMC_CPQ_City__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_City__c</fullName>
    <description>This field city is created for the location object.</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>