force-app/main/default/objects/Location/fields/PMC_CPQ_Country__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Country__c</fullName>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>