force-app/main/default/objects/Location/fields/PMC_CPQ_CustomerTotalInventory__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomerTotalInventory__c</fullName>
    <description>Customer Total Inventory for Ex-space Location object.</description>
    <label>Customer Total Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>