force-app/main/default/objects/Location/fields/PMC_CPQ_ExpeditionPoint__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpeditionPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Point</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Expedition Points</relationshipLabel>
    <relationshipName>Expeditions</relationshipName>
    <type>Lookup</type>
</CustomField>