force-app/main/default/objects/Location/fields/PMC_CPQ_ExpeditionPointValue__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpeditionPointValue__c</fullName>
    <label>Expedition Point Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>