force-app/main/default/objects/Location/fields/PMC_CPQ_ExspaceID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExspaceID__c</fullName>
    <description>This field is to store the Unique Salesforce Exspace ID</description>
    <label>Exspace ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>