force-app/main/default/objects/Location/fields/PMC_CPQ_LastInventoryDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LastInventoryDate__c</fullName>
    <description>LastInventoryDate For Exspace Location Object</description>
    <label>Last Inventory Date</label>
    <type>Date</type>
</CustomField>