force-app/main/default/objects/Location/fields/PMC_CPQ_LocationID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LocationID__c</fullName>
    <description>It identifies the location Id</description>
    <label>Location ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>