force-app/main/default/objects/Location/fields/PMC_CPQ_MinimumTons__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MinimumTons__c</fullName>
    <description>Minimum tons for EX-Space</description>
    <label>Minimum Tons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>