force-app/main/default/objects/Location/fields/PMC_CPQ_Plant__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Plant__c</fullName>
    <description>Indicates Plant Number</description>
    <label>Plant</label>
    <length>18</length>
    <type>Text</type>
</CustomField>