force-app/main/default/objects/Location/fields/PMC_CPQ_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PostalCode__c</fullName>
    <description>This field is created for Location postal code</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>