force-app/main/default/objects/Location/fields/PMC_CPQ_ProductName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to check product details</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>