force-app/main/default/objects/Location/fields/PMC_CPQ_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>