force-app/main/default/objects/Location/fields/PMC_CPQ_Region__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Region__c</fullName>
    <description>This  field is created for Location Object.</description>
    <label>Region</label>
    <length>2</length>
    <type>Text</type>
</CustomField>