force-app/main/default/objects/Location/fields/PMC_CPQ_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesOrg__c</fullName>
    <description>Sales Organization ID</description>
    <label>Sales Org</label>
    <length>18</length>
    <type>Text</type>
</CustomField>