force-app/main/default/objects/Location/fields/PMC_CPQ_SAPLocationId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPLocationId__c</fullName>
    <description>Created as part of GDASF-8811 - This holds the 4-digit Plant id and acts as external unique key to relate with Product Location object. This fields should hold a value during import.</description>
    <externalId>true</externalId>
    <label>SAP Location Id</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>