force-app/main/default/objects/Location/fields/PMC_CPQ_SAPProductCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPProductCode__c</fullName>
    <description>This field is to display the product SAP code</description>
    <formula>PMC_CPQ_ProductName__r.PMC_CPQ_SAPProductCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Product Code</label>
    <type>Text</type>
</CustomField>