force-app/main/default/objects/Location/fields/PMC_CPQ_ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to store the Ship to Account</description>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations (Ship To Account)</relationshipLabel>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>