force-app/main/default/objects/Location/fields/PMC_CPQ_ShipToSAPId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipToSAPId__c</fullName>
    <description>This field is to store the Location where ship to</description>
    <label>Ship To SAP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>