force-app/main/default/objects/Location/fields/PMC_CPQ_SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to store the Sold to Account</description>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations(Sold To Account)</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>