force-app/main/default/objects/Location/fields/PMC_CPQ_SoldToSAPId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldToSAPId__c</fullName>
    <description>This field is to store the Sold to SAP ID</description>
    <label>Sold To SAP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>