force-app/main/default/objects/Location/fields/PMC_CPQ_State__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>