force-app/main/default/objects/Location/fields/PMC_CPQ_Street__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>