force-app/main/default/objects/Location/fields/PMC_CPQ_TaxCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TaxCode__c</fullName>
    <label>Tax Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>