force-app/main/default/objects/Location/fields/PMC_CPQ_UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UnitOfMeasurement__c</fullName>
    <description>This field will store the Unit of measurement.</description>
    <label>Unit Of Measurement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>