force-app/main/default/objects/Location/fields/PMC_CPQ_WarehouseTypeName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_WarehouseTypeName__c</fullName>
    <description>This field is created to hold the Warehouse type name for the given product</description>
    <label>Warehouse Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>