force-app/main/default/objects/Location/recordTypes/PMC_CPQ_ExpeditionPoint.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_ExpeditionPoint</fullName>
    <active>true</active>
    <label>Expedition Point</label>
</RecordType>