force-app/main/default/objects/Location/recordTypes/PMC_CPQ_ExSpace_Loaction.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_ExSpace_Loaction</fullName>
    <active>true</active>
    <description>This record type created to customize ExSpace record user interface</description>
    <label>ExSpace Location</label>
</RecordType>