force-app/main/default/objects/Location/recordTypes/PMC_CPQ_Origin_Location.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_Origin_Location</fullName>
    <active>true</active>
    <description>This record type created to customize Origin record user interface</description>
    <label>Origin Location</label>
</RecordType>