force-app/main/default/objects/Location/listViews/all_locations.listView-meta.xml
<ListView>
    <fullName>all_locations</fullName>
    <columns>Name</columns>
    <columns>PMC_CPQ_Plant__c</columns>
    <columns>PMC_CPQ_SAPLocationId__c</columns>
    <columns>PMC_CPQ_ProductName__c</columns>
    <columns>PMC_CPQ_ShipToAccount__c</columns>
    <columns>PMC_CPQ_SoldToAccount__c</columns>
    <columns>PMC_CPQ_BinSpace__c</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Locations</label>
</ListView>