force-app/main/default/objects/Location/listViews/All_Origin.listView-meta.xml
<ListView>
    <fullName>All_Origin</fullName>
    <columns>Name</columns>
    <columns>PMC_CPQ_ProductName__c</columns>
    <columns>PMC_CPQ_ShipToAccount__c</columns>
    <columns>PMC_CPQ_SoldToAccount__c</columns>
    <columns>PMC_CPQ_AlternateReportingContact__c</columns>
    <columns>PMC_CPQ_BinSpace__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>PMC_CPQ_SAPLocationId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Origin</label>
</ListView>