force-app/main/default/objects/Location/listViews/Locations_without_plant_code.listView-meta.xml
<ListView>
    <fullName>Locations_without_plant_code</fullName>
    <columns>Name</columns>
    <columns>CreatedBy</columns>
    <columns>PMC_CPQ_Plant__c</columns>
    <columns>PMC_CPQ_SAPLocationId__c</columns>
    <columns>PMC_CPQ_ProductName__c</columns>
    <columns>PMC_CPQ_ShipToAccount__c</columns>
    <columns>PMC_CPQ_SoldToAccount__c</columns>
    <columns>PMC_CPQ_BinSpace__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_Plant__c</field>
        <operation>equals</operation>
    </filters>
    <label>Locations without Plant code</label>
</ListView>