force-app/main/default/objects/Location/listViews/PMC_CPQ_ActiveExclusiveSpaces.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_ActiveExclusiveSpaces</fullName>
    <columns>Name</columns>
    <columns>PMC_CPQ_ProductName__c</columns>
    <columns>PMC_CPQ_ShipToAccount__c</columns>
    <columns>PMC_CPQ_SoldToAccount__c</columns>
    <columns>PMC_CPQ_BinSpace__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>PMC_CPQ_SAPLocationId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_SoldToAccount__c</field>
        <operation>equals</operation>
        <value>CHS Inc</value>
    </filters>
    <filters>
        <field>PMC_CPQ_ProductName__c</field>
        <operation>equals</operation>
        <value>GMAP 11-52-00</value>
    </filters>
    <label>Active Exclusive Spaces</label>
</ListView>