force-app/main/default/objects/Location/listViews/PMC_CPQ_AllExclusiveSpaces.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_AllExclusiveSpaces</fullName>
    <columns>Name</columns>
    <columns>PMC_CPQ_ProductName__c</columns>
    <columns>PMC_CPQ_ShipToAccount__c</columns>
    <columns>PMC_CPQ_SoldToAccount__c</columns>
    <columns>PMC_CPQ_BinSpace__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>PMC_CPQ_AgreementStartDate__c</columns>
    <columns>PMC_CPQ_AgreementEndDate__c</columns>
    <columns>LocationType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_AgreementStartDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Exclusive Spaces</label>
</ListView>