force-app/main/default/objects/Location/listViews/PMC_CPQ_InactiveExclusiveSpaces.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_InactiveExclusiveSpaces</fullName>
    <columns>Name</columns>
    <columns>PMC_CPQ_ProductName__c</columns>
    <columns>PMC_CPQ_ShipToAccount__c</columns>
    <columns>PMC_CPQ_SoldToAccount__c</columns>
    <columns>PMC_CPQ_BinSpace__c</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Mine</filterScope>
    <label>Inactive Exclusive Spaces</label>
</ListView>